--- a/Bonuses/First-Deposit/index.html
+++ b/Bonuses/First-Deposit/index.html
@@ -19,7 +19,7 @@
     <meta name="rating" content="18+" />
     <meta
       name="description"
-      content="Explore the top first deposit bonuses for online casinos in 202! Discover limited free spins and free bets, plus read in-depth reviews from leading platforms to maximize your initial deposit!"
+      content="Explore the top first deposit bonuses for online casinos in 2026! Discover limited free spins and free bets, plus read in-depth reviews from leading platforms to maximize your initial deposit!"
     />
 
     <meta charset="UTF-8" />
@@ -32,7 +32,7 @@
     />
     <link rel="stylesheet" href="/app.css" />
     <title>
-      Best Casino First Deposit Sign up Bonus, Free Spins and Free Bets
+      Best Casino First Deposit Sign up Bonus, Free Spins and Free Bets in 2026!
     </title>
     <!-- breadcrumbs -->
     <script type="application/ld+json">
