--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -20,7 +20,7 @@
 
     <meta
       name="description"
-      content="Spin your way to success with the top casinos packed with Free Spins deals and generous WBs"
+      content="Spin your way to success with the top casinos packed with Free Spins deals and generous WBs in 2026"
     />
     <meta charset="UTF-8" />
 
@@ -31,7 +31,8 @@
     <link rel="stylesheet" href="/app.css" />
 
     <title>
-      Top Casinos with Free Spins Slots Bonus and Generous Welcome Bonuses!
+      Top Casinos with Free Spins Slots Bonus and Generous Welcome Bonuses in
+      2026!
     </title>
     <!-- breadcrumbs -->
     <script type="application/ld+json">
