--- a/Esports/index.html
+++ b/Esports/index.html
@@ -20,7 +20,7 @@
 
     <meta
       name="description"
-      content="Top esports betting sites with amazing free bet offers and generous welcome bonuses—level up your game!"
+      content="Top esports betting sites with amazing free bet offers and generous welcome bonuses—level up your game in 2026!"
     />
     <meta charset="UTF-8" />
 
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="/app.css" />
     <!-- Top Esports Betting Offers 2024: Best Bonuses & Promotions -->
     <title>
-      Bet on Esports - free bets and the best casino welcome bonuses!
+      Bet on Esports - free bets and the best casino welcome bonuses in 2026!
     </title>
     <!-- breadcrumbs jason -->
     <script type="application/ld+json">
