--- a/Reviews-page/7Bit-Casino/Bonus/index.html
+++ b/Reviews-page/7Bit-Casino/Bonus/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Claim 7Bit Casino’s welcome bonus up to $10,800 plus 250 free spins and explore ongoing promotions for crypto casino players. Check all offers here."
+      content="Claim 7Bit Casino’s 2026 welcome bonus up to $10,800 plus 250 free spins and explore ongoing promotions for crypto casino players. Check all offers here."
     />
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link
