--- a/Reviews-page/7Bit-Casino/Payments/index.html
+++ b/Reviews-page/7Bit-Casino/Payments/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Learn about 7Bit Casino’s crypto and fiat payment options. Get details on deposits, withdrawals, processing times, and security for a seamless gaming experience."
+      content="Learn about 7Bit Casino’s crypto and fiat payment options. Get details on deposits, withdrawals, processing times, and security for a seamless gaming experience in 2026."
     />
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link
@@ -30,7 +30,9 @@
 
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
 
-    <title>7Bit Casino Payment Methods – Crypto Deposits & Withdrawals</title>
+    <title>
+      7Bit Casino 2026 Payment Methods – Crypto Deposits & Withdrawals
+    </title>
     <!-- breadcrumbs -->
     <script type="application/ld+json">
       {
