--- a/Reviews-page/BetFury/Games/index.html
+++ b/Reviews-page/BetFury/Games/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Play BetFury’s 6,000+ games, including slots, table games, and exclusive in-house titles. Enjoy a crypto casino experience with instant payouts and diverse gameplay."
+      content="Play BetFury’s 6,000+ games, including slots, table games, and exclusive in-house titles. Enjoy a crypto casino experience with instant payouts and diverse gameplay in 2026."
     />
 
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
@@ -30,7 +30,7 @@
     />
 
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
-    <title>BetFury Games – Slots, Table Games & Exclusive Titles</title>
+    <title>BetFury 2026 Games – Slots, Table Games & Exclusive Titles</title>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
