--- a/Reviews-page/BetFury/Payments/index.html
+++ b/Reviews-page/BetFury/Payments/index.html
@@ -30,7 +30,7 @@
     />
 
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
-    <title>BetFury Payments – Crypto & Fiat Deposits and Withdrawals</title>
+    <title>BetFury Payments – Crypto & Fiat Deposits and Withdrawals in</title>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
