--- a/Reviews-page/Roobet/Bonus/index.html
+++ b/Reviews-page/Roobet/Bonus/index.html
@@ -29,7 +29,7 @@
     />
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
     <title>
-      Roobet Bonuses & Promotions – Cashback, Free Spins & Crypto Rewards
+      Roobet 2026 Bonuses & Promotions – Cashback, Free Spins & Crypto Rewards
     </title>
     <!-- breadcrumbs -->
     <script type="application/ld+json">
