--- a/Reviews-page/Thunderpick/Bonus/index.html
+++ b/Reviews-page/Thunderpick/Bonus/index.html
@@ -29,7 +29,7 @@
     />
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
     <title>
-      Thunderpick Bonuses – Welcome Offers, Promotions & Crypto Rewards
+      Thunderpick 2026 Bonuses – Welcome Offers, Promotions & Crypto Rewards
     </title>
     <!-- breadcrumbs -->
     <script type="application/ld+json">
