--- a/Reviews-page/Wild.io/Bonus/index.html
+++ b/Reviews-page/Wild.io/Bonus/index.html
@@ -30,7 +30,9 @@
 
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
 
-    <title>Wild.io Bonuses – Welcome Offers, Cashback & Loyalty Rewards</title>
+    <title>
+      Wild.io 2026 Bonuses – Welcome Offers, Cashback & Loyalty Rewards
+    </title>
 
     <!-- breadcrumbs -->
     <script type="application/ld+json">
