--- a/Sports/index.html
+++ b/Sports/index.html
@@ -21,7 +21,7 @@
     <meta name="robots" content="index ,follow" />
     <meta
       name="description"
-      content="Unlock free bets and generous welcome bonuses at the top sports betting sites—start betting now!"
+      content="Discover the top online sports betting sites in 2026 offering free bets and generous welcome bonuses. Compare features, markets, and current offers."
     />
     <meta charset="UTF-8" />
 
@@ -31,7 +31,9 @@
     <link rel="canonical" href="https://www.all4wins.com/Sports/" />
 
     <link rel="stylesheet" href="/app.css" />
-    <title>Best Betting Websites, Sportsbook Promos and Bonus Bets!</title>
+    <title>
+      Best Betting Websites and Sportsbook Promos with Bonus Free Bets in 2026!
+    </title>
 
     <!-- breadcrumbs -->
     <script type="application/ld+json">
