--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <meta
       name="description"
-      content="All4Wins: Discover top casinos, thrilling sports, and esports betting with amazing free spins, free bets, and unbeatable welcome bonuses!"
+      content="All4Wins: Discover top casinos, thrilling sports, and esports betting with amazing free spins, free bets, and unbeatable welcome bonuses in 2026!"
     />
     <meta charset="UTF-8" />
 
@@ -32,8 +32,8 @@
     <link rel="stylesheet" href="app.css" />
 
     <title>
-      All4Wins: Top Casino, Sports & Esports Betting Free Spins, Free Bet
-      Offers!
+      Top Casino, Sports & Esports Betting Offers 2026 – Free Spins & Free Bets
+      | All4Wins
     </title>
 
     <!-- JSON-LD for All4Wins Homepage -->
