--- a/Reviews-page/7Bit-Casino/Games/index.html
+++ b/Reviews-page/7Bit-Casino/Games/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Play 7Bit Casino’s extensive collection of crypto slots, table games, and live dealer experiences. Discover exclusive titles and popular casino games today."
+      content="Play 7Bit Casino’s 2026 extensive collection of crypto slots, table games, and live dealer experiences. Discover exclusive titles and popular casino games today."
     />
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link
@@ -30,7 +30,7 @@
 
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
 
-    <title>7Bit Casino Games – Slots, Table & Live Dealer</title>
+    <title>7Bit Casino Games – Slots, Table & Live Dealer in 2026</title>
     <!-- breadcrumbs -->
     <script type="application/ld+json">
       {
