--- a/News-Articles/BCGame_Promo_Free_Spins_on_Thor_Rage/index.html
+++ b/News-Articles/BCGame_Promo_Free_Spins_on_Thor_Rage/index.html
@@ -64,10 +64,9 @@
       {
         "@context": "https://schema.org",
         "@type": "Promotion",
-        "name": "BC.Game Fishing Frenzy Tournament",
-        "description": "Join BC.Game's Fishing Frenzy Tournament and compete for a share of the $570,700 prize pool across 13 weekly events. Play Spadegaming's fishing-themed games and climb the leaderboard to win cash prizes up to $10,000 each week.",
-        "image": "https://www.all4wins.com/img/news-banners/bcgame-fighing-tournament-banner.webp",
-        "url": "https://www.all4wins.com/News-Articles/BCGame_Fishing_Frenzy_Tournament_570,700_Dolars_Prize_Pool/",
+        "name": "Unlock 10 Free Spins daily on Thor's Rage at BC.Game this August! Wager €20 on selected weekends to claim your spins. Limited-time global promo.",
+        "image": "https://www.all4wins.com/img/news-banners/bcgame-thor-freespis-banner.webp",
+        "url": "https://www.all4wins.com/News-Articles/BCGame_Promo_Free_Spins_on_Thor_Rage/",
 
         "publisher": {
           "@type": "Organization",
