--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -426,6 +426,31 @@
                     </div>
                   </a>
                 </div>
+                <!-- duelbits aviamasters -->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Duelbits-Aviamasters-Exclusive-Crash-Game-98-RTP/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/Duelbits-aviaMasters-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Duelbits Aviamasters Exclusive Game – 98% RTP Crash Game
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
 
                 <!-- avia roobet-->
                 <div class="news-item">
@@ -583,90 +608,6 @@
                   </a>
                 </div>
 
-                <!--duelbits thors rage-->
-                <div class="news-item">
-                  <a
-                    href="/News-Articles/Duelbits_Thor_Rage_Slot_Win_Up_to_10000x/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/duelbits-thor-news.webp"
-                        width="300"
-                        height="200"
-                        alt="ggbet-esl-bangkok-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Play Duelbits Thor’s Rage Slot – Win Up to 10,000x!
-                        <br />
-                        <strong> Offer ongoing </strong>
-                      </h2>
-
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!-- rupy-->
-                <div class="news-item">
-                  <a href="/News-Articles/BCGame_₹1000_Free_Cash_Reward/">
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/bcgame-rupy-news.webp"
-                        width="300"
-                        height="200"
-                        alt="ggbet-esl-bangkok-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        No withdrawal limits and no wagering requirements ₹1,000
-                        Free Cash Reward Now Credited <br />
-
-                        <strong> Offer expires on 1st of January 2026</strong>
-                      </h2>
-
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!--duelbits drops 2025-->
-                <div class="news-item">
-                  <a
-                    href="/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150000_Dolars_in_Random_Prize_Drops/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/duelbits-drops-2025-news.webp"
-                        width="300"
-                        height="200"
-                        alt="ggbet-esl-bangkok-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        BGaming Drops Frenzy Fest at Duelbits – Win Your Share
-                        of $150,000 in Random Drops <br />
-
-                        <strong> Offer expires on December 31st, 2025 </strong>
-                      </h2>
-
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
                 <!-- roobet mad muertos-->
                 <div class="news-item">
                   <a
@@ -686,32 +627,6 @@
                         Mad Muertos is Here – Exclusive to Roobet <br />
                         <strong>Offer ongoing</strong>
                       </h2>
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!-- lotery-->
-                <div class="news-item">
-                  <a href="/News-Articles/BC.GAME-Welcome-Lottery/">
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/Bc.Game-loto-news.webp"
-                        width="300"
-                        height="200"
-                        alt="ggbet-esl-bangkok-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        BC.GAME Welcome Lottery – Unlock Your Exclusive Promo
-                        Code for a Chance to Win $100,000!<br />
-                        <p>Offer expires on 1st of January 2026</p>
-                      </h2>
-
                       <div class="news-button">
                         <button>Read More</button>
                       </div>
@@ -780,35 +695,6 @@
                         Free Spins Every Week! <br />
 
                         <strong> Offer Ongoing</strong>
-                      </h2>
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!-- duelbits ch bonuses-->
-                <div class="news-item">
-                  <a
-                    href="/News-Articles/Duelbits-Beyond-Limits-This-Christmas/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/duelbits-ch-bonus-news.webp"
-                        width="300"
-                        height="200"
-                        alt="ggbet-esl-bangkok-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Duelbits: Rewarding Christmas Promos to Make Your
-                        December Unforgettable!
-                        <br />
-
-                        <strong> Offer ongoing </strong>
                       </h2>
                       <div class="news-button">
                         <button>Read More</button>
