new esports calendar

--- a/Esports/index.html
+++ b/Esports/index.html
@@ -444,7 +444,7 @@
 
                 <!-- esports event calendar-->
                 <div class="news-item">
-                  <a href="/News-Articles/Esports-Event-Calendar-2025/">
+                  <a href="/News-Articles/Esports-Event-Calendar-2026/">
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/espoerts-events.webp"
@@ -456,10 +456,7 @@
                     </div>
                     <div class="news-content">
                       <h2>
-                        The 2025 esports calendar is packed with exciting
-                        tournaments, featuring top games like CS2, VALORANT, and
-                        League of Legends, promising huge prizes and non-stop
-                        action!
+                       Esports Events Calendar 2026 │ Major Tournaments of the Year
                       </h2>
                       <div class="news-button">
                         <button>Read More</button>
