--- a/Reviews-page/BC.Game/index.html
+++ b/Reviews-page/BC.Game/index.html
@@ -545,13 +545,13 @@
                 available, BC.Game offers attractive odds and numerous sports
                 betting bonuses.
               </p>
-              <li class="review-img">
+              <div class="review-img">
                 <img
                   src="/img/news-banners/bc.game-sports.webp"
                   loading="lazy"
                   alt="bc.game site"
                 />
-              </li>
+              </div>
 
               <h2>Conclusion</h2>
 
