--- a/Reviews-page/BC.Game/Bonus/index.html
+++ b/Reviews-page/BC.Game/Bonus/index.html
@@ -414,13 +414,13 @@
             rewarded for their loyalty and participation. Below is an overview
             of the main bonus offerings available:
           </p>
-          <li class="review-img">
+          <div class="review-img">
             <img
               src="/img/news-banners/bcgame-wb-casino-sports.webp"
               loading="lazy"
               alt="bc.game site"
             />
-          </li>
+          </div>
           <h2>BC.Game Welcome Bonus – Casino & Sports Betting Offers</h2>
           <p>
             BC.Game rewards new users with two welcome packages: a sports
