--- a/index.html
+++ b/index.html
@@ -315,6 +315,32 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+                 
+                <!-- roobet love 2026-->
+            <div class="news-item">
+              <a
+                href="/News-Articles/Fall-in-Love-With-Big-Casino-Wins-This-February-at-Roobet/"
+              >
+                <div class="news-banner">
+                  <img
+                    src="/img/news-banners/February-Roobet-2026-news.webp"
+                    width="300"
+                    height="200"
+                    alt="Mission Uncrossable Banner"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="news-content">
+                  <h2>
+                    Fall in Love With Big Casino Wins This February at Roobet <br>
+                  
+                  <strong>Offer expires on February 17th </strong></h2>
+                  <div class="news-button">
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </a>
+            </div>
 
                <!-- duelbits aviamasters -->
                <div class="news-item">
