--- a/Sports/index.html
+++ b/Sports/index.html
@@ -400,6 +400,34 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                <!-- bcgame weekly april 2026-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/BCGAME-Weekly-Sports-Bonus-Up-to-1,000-USD-Every-Week/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/BcGame-sportsbetting-weekly-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        BC.GAME Weekly Sports Bonus – Up to $1,000 Every Week
+                        <br />
+                        <strong>Offer expires on April 1st</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!-- betfury-promocode-->
                 <div class="news-item">
                   <a href="/News-Articles/Betfury-Promo-Code/">
