--- a/index.html
+++ b/index.html
@@ -315,6 +315,33 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+
+                <!--duelbits 1btc-->
+            <div class="news-item">
+              <a
+                href="/News-Articles/Duelbits-Ultimate-Fighting-Jackpot-Win-1-BTC-and-$2,000-Leaderboard/"
+              >
+                <div class="news-banner">
+                  <img
+                    src="/img/news-banners/Duelbits-1btc-news.webp"
+                    width="300"
+                    height="200"
+                    alt="ggbet-esl-bangkok-news"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="news-content">
+                  <h2>
+                    Duelbits Ultimate Fighting Jackpot – Win Up to 1 BTC and
+                    $2,000 Weekly Leaderboard
+                  </h2>
+
+                  <div class="news-button">
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </a>
+            </div>
                    <!-- bcgame weekly april 2026-->
                 <div class="news-item">
                   <a
